static/style.css
/* Default (Light Mode)*/
/*Variables*/
:root {
    /* Main page background*/
    --bg-primary: linear-gradient(to bottom, #b3ecff, #4da6ff, #003d66) ;

    /* Cards and forms backgroud */
    --bg-secondary: linear-gradient(to top,#d9e9f2,#7fa9bf,#003d66);

    /*Main text color*/
    --text-primary:  #1a202c;

    /*Smaller text / not important*/
    --text-secondary:#4a5568;

    /*buttons and links*/
    --accent:        #3182ce;

    /*buttons when hovered over*/
    --accent-hover:  #2b6cb0;

    /*Lines and borders*/
    --border:        #000000;

    /*Card shadows*/
    --shadow: 0 2px 8px rgba(0,0,0,0.08);

    --bg-table-one: #b3ecff;

    --bg-table-two: #4da6ff;

    --bg-sort: #003d66;

    /*For all input boxes*/
    --bg-input: #dceefb;

    --bg-sort-table: #006b8f;

    --text-title: white;

}

/* Dark Mode */
/*Variables*/
body.dark {
    /* Main page background*/
    --bg-primary: linear-gradient(to bottom, #003d66, #002b4d, #001a33);

    /* Cards and forms backgroud */
    --bg-secondary: linear-gradient(to top,#002b4d,#003a5c,#004f6e,#e6eef5);

    /*Main text color*/
    --text-primary:  #f7fafc;

    /*Smaller text / not important*/
    --text-secondary:#a0aec0;

    /*buttons and links*/
    --accent:        #63b3ed;

    /*buttons when hovered over*/
    --accent-hover:  #90cdf4;

    /*Lines and borders*/
    --border:        #ffffff;

    /*Card shadows*/
    --shadow:        0 2px 8px rgba(0,0,0,0.3);

    --bg-table-one: #003d66;

    --bg-table-two: #002b4d;

    --bg-sort: #001a33;

    --bg-input: rgba(180, 200, 220, 0.15);

    --bg-sort-table: #00334e;

    --text-title: #2b2b2b;

}

/*_______________________________________________________________________________________________________________________*/

/*Added because it was hard to see in dark mode*/
a{

    color: var(--text-secondary);

}

label{

    display: block;

    text-align: left;

    margin-top: 10px;

    color: white;

}

h1{

    text-align: center;

    white-space: nowrap;

}


/*_______________________________________________________________________________________________________________________*/

/*Body Global*/
body {
  
    background: var(--bg-primary);

    /*For the text*/
    color: var(--text-primary);

    /*This changes the font from left to right and if the first is not avalable it goes to the next*/
    font-family: "Inter", Arial, sans-serif;

    /*Will make sure the background color is on the whole page and not cut off*/
    min-height: 100vh;
}

/*_______________________________________________________________________________________________________________________*/

/*Containers for all forms*/
 .container{

    text-align: center;

    background: var(--bg-secondary);

    max-width: 450px;

    margin: 40px auto;

    padding: 20px;

    border-radius: 10px;

    box-shadow: var(--shadow);


    h2{

        color: var(--text-title);

    }

}

/*Container for the table because it needs to be wide*/
.container-table{

    text-align: center;

    background: var(--bg-secondary);

    width: fit-content;

    margin: 40px auto;

    padding: 20px;

    border-radius: 10px;

    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25),0 0 6px rgba(0, 0, 0, 0.15);


    h2{

        color: var(--text-title);

    }

}


.sort-table-box{


    background-color: var(--bg-sort-table);

    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25),0 0 6px rgba(0, 0, 0, 0.15);

    border-radius: 10px;

    padding: 10px;

    margin-bottom: 30px;

    width: fit-content;

}

@media(max-width: 750px){

    .container-table{

        width: 100%;

        box-sizing: border-box;

    }

    .sort-table-box{

        width: 100%;

        box-sizing: border-box;

    }

    h1{

        white-space: normal;

        word-wrap: break-word;

    }

    .button-add-job a{

        padding: 14px 60px;

        font-size: 1.1em;

    }


}

/*_______________________________________________________________________________________________________________________*/

/*Table styling*/
table {
    
    width: 90%;
    
    /*Removes the borders between the cells*/
    border-collapse: collapse;
    
    margin: 10px auto;

    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25),0 0 6px rgba(0, 0, 0, 0.15);

    margin-bottom: 30px;

}

/*Table headers*/
th {

    background-color: var(--accent);
    
    color: white;
    
    padding: 10px;
    
    text-align: left;

    border-left: 1px solid var(--border);

    border-right: 1px solid var(--border);

    border-bottom: 1px solid var(--border);

}

/*Table cells*/
td {

    padding: 10px;
    
    color: var(--text-primary);

    border: 1px solid var(--border);

}

/*Alternating row colors to distinguish jobs on every even number*/
tr:nth-child(even) {

    background: var(--bg-table-one);

}

tr:nth-child(odd){

    background: var(--bg-table-two);

}

/*Table cell links into buttons*/
td a {

    border: 2px solid var(--border);

    border-radius: 10px;

    padding: 6px 10px;

    /*em is 85% of normal size*/
    font-size: 0.85em;

    background-color: var(--accent);

    color: white;

    text-decoration: none;

    transition: 0.4s ease;

}

/*When a button is hovered or clicked*/
td a:hover{
    border: 2px solid rgb(190, 165, 165);
}

/*_______________________________________________________________________________________________________________________*/

.button a {

    background-color: var(--accent);

    color: white;

    /*Top and bottom*/
    padding: 10px 20px;

    border-radius: 10px;

    text-decoration: none;

    display: inline-block;

    /*Top and bottom*/
    margin: 20px 5px;

    transition: 0.4s ease;

    border: 2px solid var(--border);

    margin-bottom: 15px;

}

/*When a button is hovered or clicked*/
.button a:hover{
    border: 2px solid rgb(190, 165, 165);
}


.button-add-job a {

    background-color: var(--accent);

    color: white;

    padding: 10px;

    border-radius: 10px;

    text-decoration: none;

    display: inline-block;

    margin: 5px;

    transition: 0.4s ease;

    border: 2px solid var(--border);

}

/*When a button is hovered or clicked*/
.button-add-job a:hover{
    border: 2px solid rgb(190, 165, 165);
}




.sort-box{

    display: inline-block;

    background-color: var(--bg-sort);

    color: white;

    padding: 5px;

    margin: 10px;

    border-radius: 10px;

    text-align: center;

    margin-bottom: 30px;



}


.sort-buttons a {

    background-color: var(--accent);

    color: white;

    padding: 10px 20px;

    border-radius: 10px;

    text-decoration: none;

    display: inline-block;

    margin: 10px;

    border: 2px solid var(--border);

    transition: 0.4s ease;

}

/*When a button is hovered or clicked*/
.sort-buttons a:hover{
    border: 2px solid rgb(190, 165, 165);
}


/*_______________________________________________________________________________________________________________________*/

/*For the inputs and the boxes*/
input, textarea{

    margin: 5px 0;

    width: 100%;

    padding: 10px;

    border: 2px solid var(--border);

    /*Corners*/
    border-radius: 10px;

    background-color: var(--bg-input);

    /*Text color*/
    color: var(--text-secondary);

    /*So no overflow*/
    box-sizing: border-box;

    transition: 0.4s ease;

}

/*When hovered and clicked*/
input:hover, textarea:hover{
    border: 2px solid rgb(190, 165, 165);
}


/*_______________________________________________________________________________________________________________________*/

/*All button styling*/
button{

    display: block;

    margin: 20px auto;

    width: 50%;

    padding: 10px;

    background-color: var(--accent);

    color: white;

    border: 2px solid var(--border);

    cursor: pointer;

    transition: 0.4s ease;

    border-radius: 10px;

}

/*When a button is hovered or clicked*/
button:hover{
    border: 2px solid rgb(190, 165, 165);
}

/*_______________________________________________________________________________________________________________________*/

/*Fix the Dark mode button to the top left and make sure it is on top*/
#dark-mode-toggle{

    width: 10%;
    
    position: fixed;
    
    top: 10px;

    left: 10px;

    /*Make it onto of everything*/
    z-index: 1000;

    padding: 10px;

    border-radius: 10px;

    background-color: var(--accent);

    color: white;

    border: 2px solid var(--border);

    cursor: pointer;

    transition: 0.4s ease;

}

/*When a button is hovered or clicked*/
#dark-mode-toggle:hover{
    border: 2px solid rgb(190, 165, 165);
}

@media(max-width: 750px){

    #dark-mode-toggle{

        width: auto;

        /*Makes it stay on one line*/
        white-space: nowrap;

        /*Makes the font smaller for a phone*/
        font-size: 0.85em;


        position: relative;

        top: auto;

        left: auto;

        display: block;

        margin: 10px auto;

    }

}


/*_______________________________________________________________________________________________________________________*/


form{

    background-color: var(--bg-sort-table);

    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25),0 0 6px rgba(0, 0, 0, 0.15);

    border-radius: 10px;

    padding: 10px;

    margin: 30px auto;

    width: 90%;

    max-width: 380px;

}

